# nox

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  HEALTH_CHECK_COMPLETE.md  Makefile  PR_HYGIENE_STAGE1.md  REFACTOR_ISSUES.md  copilot_master_brief.md  copilot_prompt_nox.md  coverage.xml  dev-requirements.txt  pyproject.toml  requirements.txt  triage_nox.md
.github/: AUTOMERGE_FIX.md  dependabot.yml
.github/issue_templates/: refactor-template.md
.github/scripts/: smoke-test.sh  (+1 more)
agent/: __init__.py  executor.py  instruction_runner.py  planner.py
ai/: ai_coordinator.py  biometric_auth.py  policy_engine.py  security_monitor.py
api/: database_manager_multinode.py  main.py  multinode_integration.py  session_manager_distributed.py
auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py  utils.py
clients/: tests_demo.py
dashboard/: app.py  app_v23.py  app_v24.py  client_v23.py  oauth2_client.py
docs/: INDEX.md  README.md  ci-workflow.md  nox_core_extraction_plan_wave1.md
docs-interactive/: package-lock.json  package.json
nox_api/: __init__.py  main.py
observability/: metrics.py  metrics_chatgpt.py  middleware.py  simple_metrics.py
quotas/: __init__.py  database.py  metrics.py  middleware.py  migrations.py  models.py  routes.py
scripts/: backup_restore_cli.py  check_markdown_links.py  metrics_dashboard.py  nox_audit.py  onboarding_wizard.py  rate_limit_dashboard.py  search_docs.py  test_redis_cluster.py  verify_env.py
tests/: test_api_minimal.py  test_ci_validation.py  tests_xtb_e2e.py
workers/: jobs_worker.py
(+103 files in other folders)
