[tool.poetry]
name = "nox-api"
version = "0.1.0"
description = "Nox API minimal functional skeleton"
authors = ["lewispoul"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = "^2.6.0"
dramatiq = "^1.14.2"
redis = "^5.0.4"
python-multipart = "^0.0.7"
httpx = "^0.27.0"
pytest = "^8.2.0"
anyio = "^4.3.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-exclude = ["docs/legacy", ".venv", "dist", "build", "/migrations/"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
